@@ -7,7 +7,53 @@ use Test::Script;
 script_runs 't/bin/print.pl';
 
 subtest 'stdout' => sub {
-  plan tests => 4;
+  plan tests => 8;
+
+  subtest 'is' => sub {
+    check_test( sub {
+        script_stdout_is "Standard Out\nsecond line\n";
+      }, {
+        ok => 1,
+        name => 'stdout matches',
+      },
+      'script_stdout_is',
+    );
+  };
+
+  subtest 'isnt' => sub {
+    check_test( sub {
+        script_stdout_isnt "XXXX";
+      }, {
+        ok => 1,
+        name => 'stdout does not match',
+      },
+      'script_stdout_isnt',
+    );
+  };
+
+  subtest 'not is' => sub {
+    my(undef, $r) = check_test( sub {
+        script_stdout_is "XXX",
+      }, {
+        ok => 0,
+        name => 'stdout matches',
+      },
+      'script_stdout_is',
+    );
+    note $r->{diag};    
+  };
+
+  subtest 'not isnt' => sub {
+    my(undef, $r) = check_test( sub {
+        script_stdout_isnt "Standard Out\nsecond line\n";;
+      }, {
+        ok => 0,
+        name => 'stdout does not match',
+      },
+      'script_stdout_isnt',
+    );
+    note $r->{diag};    
+  };
 
   subtest 'like' => sub {
 
@@ -17,6 +63,7 @@ subtest 'stdout' => sub {
         ok => 1,
         name => 'stdout matches',
       },
+      'script_stdout_like',
     );
     
   };
@@ -29,6 +76,7 @@ subtest 'stdout' => sub {
         ok => 0,
         name => 'stdout matches',
       },
+      'script_stdout_like',
     );
 
     note $r->{diag};    
@@ -43,6 +91,7 @@ subtest 'stdout' => sub {
         ok => 1,
         name => 'stdout does not match',
       },
+      'script_stdout_unlike',
     );
     
   };
@@ -55,6 +104,7 @@ subtest 'stdout' => sub {
         ok => 0,
         name => 'stdout does not match',
       },
+      'script_stdout_unlike',
     );
     
     note $r->{diag};    
@@ -63,7 +113,53 @@ subtest 'stdout' => sub {
 };
 
 subtest 'stderr' => sub {
-  plan tests => 4;
+  plan tests => 8;
+
+  subtest 'is' => sub {
+    check_test( sub {
+        script_stderr_is "Standard Error\nanother line\n";
+      }, {
+        ok => 1,
+        name => 'stderr matches',
+      },
+      'script_stderr_is',
+    );
+  };
+
+  subtest 'isnt' => sub {
+    check_test( sub {
+        script_stderr_isnt "XXXX";
+      }, {
+        ok => 1,
+        name => 'stderr does not match',
+      },
+      'script_stderr_isnt',
+    );
+  };
+
+  subtest 'not is' => sub {
+    my(undef, $r) = check_test( sub {
+        script_stderr_is "XXX",
+      }, {
+        ok => 0,
+        name => 'stderr matches',
+      },
+      'script_stderr_is',
+    );
+    note $r->{diag};    
+  };
+
+  subtest 'not isnt' => sub {
+    my(undef, $r) = check_test( sub {
+        script_stderr_isnt "Standard Error\nanother line\n";;
+      }, {
+        ok => 0,
+        name => 'stderr does not match',
+      },
+      'script_stderr_isnt',
+    );
+    note $r->{diag};    
+  };
 
   subtest 'like' => sub {
 
@@ -73,6 +169,7 @@ subtest 'stderr' => sub {
         ok => 1,
         name => 'stderr matches',
       },
+      'script_stderr_like',
     );
     
   };
@@ -85,6 +182,7 @@ subtest 'stderr' => sub {
         ok => 0,
         name => 'stderr matches',
       },
+      'script_stderr_like',
     );
 
     note $r->{diag};    
@@ -99,6 +197,7 @@ subtest 'stderr' => sub {
         ok => 1,
         name => 'stderr does not match',
       },
+      'script_stderr_unlike',
     );
     
   };
@@ -111,6 +210,7 @@ subtest 'stderr' => sub {
         ok => 0,
         name => 'stderr does not match',
       },
+      'script_stderr_unlike',
     );
     
     note $r->{diag};    
